<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Kremeing Hot Light</string>
    <string name="notification_channel_name">Hot Light Alerts</string>
    <string name="notification_channel_description">Alerts when a nearby store turns its hot light on</string>
    <string name="radius_label">Alert radius: %1$d mi</string>
    <string name="menu_near_me">Near me</string>
    <string name="menu_settings">Settings</string>
    <string name="map_load_failed">Couldn\'t load nearby stores</string>
    <string name="search_hint">Search ZIP or city (e.g. 98109)</string>
    <string name="search_no_results">No results for \"%1$s\"</string>
    <string name="label_today">Today</string>
    <string name="label_today_predicted">Today · shading = usually on (%1$s)</string>
    <string name="label_90_days">Last 90 days</string>
    <string name="status_on">Hot Light On</string>
    <string name="status_off">Hot light off</string>
    <string name="status_unknown">Status unknown</string>
    <string name="action_navigate">Navigate</string>
    <string name="detail_load_failed">Couldn\'t load store history</string>
</resources>
